[gd_scene load_steps=55 format=2]

[ext_resource path="res://GFX/HUD/anim.png" type="Texture" id=1]
[ext_resource path="res://GFX/HUD/Mario.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Main/timeout.wav" type="AudioStream" id=3]
[ext_resource path="res://Scripts/General/HUD.gd" type="Script" id=4]
[ext_resource path="res://GFX/HUD/Coins.png" type="Texture" id=5]
[ext_resource path="res://Sounds/Main/1up.wav" type="AudioStream" id=6]
[ext_resource path="res://GFX/Fonts/MFFont.fnt" type="BitmapFont" id=7]
[ext_resource path="res://Sounds/Bonuses/coin.wav" type="AudioStream" id=8]
[ext_resource path="res://GFX/HUD/gameover.png" type="Texture" id=9]
[ext_resource path="res://Sounds/Main/scoreing.wav" type="AudioStream" id=10]
[ext_resource path="res://GFX/Editor/DebugInvisible.png" type="Texture" id=11]
[ext_resource path="res://GFX/Editor/DebugFly.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 63, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 126, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 189, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 252, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 315, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 63, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 126, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 189, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 252, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 315, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 63, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 126, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 189, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 252, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 315, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 63, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 126, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 189, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 252, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 315, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 63, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 126, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 189, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 252, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 315, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 63, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 126, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 189, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 252, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 315, 0, 63, 16 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 63, 16 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 28, 16 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 28, 0, 28, 16 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 56, 0, 28, 16 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="HUD" type="CanvasLayer"]
layer = 5
script = ExtResource( 4 )

[node name="TimeSprite" type="AnimatedSprite" parent="."]
light_mask = 0
position = Vector2( 561, 24 )
frames = SubResource( 38 )

[node name="Player" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 97, 24 )
texture = ExtResource( 2 )

[node name="CoinsSprite" type="AnimatedSprite" parent="."]
light_mask = 0
position = Vector2( 256, 43 )
frames = SubResource( 42 )
frame = 1
playing = true

[node name="GameoverSprite" type="Sprite" parent="."]
visible = false
light_mask = 0
position = Vector2( 320, 240 )
texture = ExtResource( 9 )

[node name="DebugFlySprite" type="Sprite" parent="."]
visible = false
light_mask = 0
position = Vector2( 608, 448 )
texture = ExtResource( 12 )

[node name="DebugInvisibleSprite" type="Sprite" parent="."]
visible = false
light_mask = 0
position = Vector2( 608, 448 )
texture = ExtResource( 11 )

[node name="Lives" type="Label" parent="."]
light_mask = 0
margin_left = 150.0
margin_top = 13.0
margin_right = 166.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/font = ExtResource( 7 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
light_mask = 0
margin_left = 149.0
margin_top = 32.0
margin_right = 165.0
margin_bottom = 54.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="."]
margin_left = 273.0
margin_top = 32.0
margin_right = 305.0
margin_bottom = 54.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
margin_left = 545.0
margin_top = 32.0
margin_right = 593.0
margin_bottom = 54.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 7 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugOrphaneNodes" type="Label" parent="."]
visible = false
modulate = Color( 1, 0, 0, 0.784314 )
light_mask = 0
margin_left = 48.0
margin_top = 446.0
margin_right = 80.0
margin_bottom = 468.0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/font = ExtResource( 7 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sounds"

[node name="TimeoutSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sounds"

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Sounds"

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Sounds"

[connection signal="animation_finished" from="TimeSprite" to="." method="_on_anim_finish"]
